JatosUpdater.java - add '--add-opens' to the list of removed parameters during restart